package com.example.mtcg.card;

public enum CardType {
    SPELL,
    MONSTER

    /*	public void x() {
		Card c = new MonsterCard();
		if (c instanceof MonsterCard) {

		}
	}*/
}

