package com.example.mtcg.card;

public class SpellCard {
}
